--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ header .bottom-header .sub-all{
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: -45px;
+    top: 0px;
     left: 0;
     bottom: 0;
 }
@@ -114,7 +114,7 @@ header .bottom-header .sub-all .hmenu-seprartor{
 .close{
     position: absolute;
     left: 100%;
-    top: 45px;
+    top: 0;
     z-index: 200;
 }
 .close>i{
