--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body{
     height: 400vh;
     /* background-color: red; */
 }
+button{
+    cursor: pointer;
+    border: none;
+}
 .none{display: none !important;}
 header{
     display: flex;
@@ -223,6 +227,7 @@ header .bottom-header .sub-all .hmenu-seprartor{
 .close>i{
     color: var(--close-color);
     font-size: 20px;
+    cursor: pointer;
 }
 
 
