--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,9 @@ header .shopping{
     align-items: center;
     justify-content: end;
 }
+header .hamburger-menu{
+    display: none;
+}
 
 
 header .shopping .orders-links{
@@ -263,6 +266,12 @@ header .bottom-header .sub-all .hmenu-seprartor{
 @media screen and (max-width: 576px){
     header{
         height: 60px;
+    }
+    header .top-header .shopping{
+        display: none;
+    }
+    header .top-header .hamburger-menu{
+        display: block;
     }
     header .top-header .amazon-logo .amazon-link{
         display: none;
